--- a/PhotoSharingDemo/war/photofeed.css
+++ b/PhotoSharingDemo/war/photofeed.css
@@ -78,6 +78,12 @@ div.tabContent#viewstream .next-3-pict {
   left: 5px;
 }
 
+div.tabContent#viewstream .fb-like {
+  position:absolute;
+  top: 100px;
+  left: 550px;
+}
+
 .subscribe {
   position:relative;
   top: 0px;
@@ -368,4 +374,10 @@ textarea {
   vertical-align: middle;
   width: 100%;
   height: 100%;
+}
+
+.errormsg {
+  vertical-align: middle;
+  width: 60%;
+  height: 60%;
 }
